--- a/Checklists/Base.lproj/Main.storyboard
+++ b/Checklists/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CZW-d0-6R5">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -36,25 +36,25 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Birthdays" translatesAutoresizingMaskIntoConstraints="NO" id="3Xz-qX-gsm">
-                                            <rect key="frame" x="36" y="19" width="36" height="52"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Birthdays" translatesAutoresizingMaskIntoConstraints="NO" id="3Xz-qX-gsm">
+                                            <rect key="frame" x="36" y="19" width="36" height="51"/>
                                         </imageView>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="jdh-LQ-liD" firstAttribute="top" secondItem="ugL-Xd-67n" secondAttribute="bottom" constant="8" id="Bcb-l1-fx8"/>
-                                        <constraint firstItem="3Xz-qX-gsm" firstAttribute="leading" secondItem="SDz-Vu-JWY" secondAttribute="leadingMargin" constant="16" id="Bks-f7-gKs"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="3Xz-qX-gsm" secondAttribute="bottom" constant="8" id="Oio-eS-lFw"/>
+                                        <constraint firstItem="ugL-Xd-67n" firstAttribute="leading" secondItem="3Xz-qX-gsm" secondAttribute="trailing" constant="10" id="Eo8-zx-mqQ"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="3Xz-qX-gsm" secondAttribute="bottom" constant="8" id="Isn-IU-j64"/>
+                                        <constraint firstItem="jdh-LQ-liD" firstAttribute="leading" secondItem="3Xz-qX-gsm" secondAttribute="trailing" constant="10" id="Nwc-Hf-0l1"/>
                                         <constraint firstItem="ugL-Xd-67n" firstAttribute="top" secondItem="SDz-Vu-JWY" secondAttribute="topMargin" constant="8" id="TTU-i7-elL"/>
-                                        <constraint firstItem="ugL-Xd-67n" firstAttribute="leading" secondItem="3Xz-qX-gsm" secondAttribute="trailing" constant="10" id="XE8-Gh-xde"/>
-                                        <constraint firstItem="3Xz-qX-gsm" firstAttribute="top" secondItem="SDz-Vu-JWY" secondAttribute="topMargin" constant="8" id="hxm-xH-A97"/>
-                                        <constraint firstItem="jdh-LQ-liD" firstAttribute="leading" secondItem="3Xz-qX-gsm" secondAttribute="trailing" constant="10" id="s3v-1J-VEc"/>
+                                        <constraint firstItem="3Xz-qX-gsm" firstAttribute="leading" secondItem="SDz-Vu-JWY" secondAttribute="leadingMargin" constant="16" id="p8I-Gi-btG"/>
+                                        <constraint firstItem="3Xz-qX-gsm" firstAttribute="top" secondItem="SDz-Vu-JWY" secondAttribute="topMargin" constant="8" id="uU9-Dk-hW2"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="iconView" destination="3Xz-qX-gsm" id="i1S-5p-aU3"/>
                                     <outlet property="subtitleLabel" destination="jdh-LQ-liD" id="MbE-KF-ya1"/>
                                     <outlet property="titleLabel" destination="ugL-Xd-67n" id="vbZ-MQ-djz"/>
-                                    <segue destination="J4m-K5-t4U" kind="show" id="Avb-aE-LFv"/>
+                                    <segue destination="J4m-K5-t4U" kind="show" identifier="MainToGroupDetails" id="Avb-aE-LFv"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -85,13 +85,12 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="74"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aPR-zC-NGe">
-                                            <rect key="frame" x="-67" y="-37" width="68" height="128"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        </imageView>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aOa-2e-zNd">
-                                            <rect key="frame" x="9" y="13" width="68" height="44"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aOa-2e-zNd">
+                                            <rect key="frame" x="16" y="7" width="30" height="60.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="AjY-jv-O5j"/>
+                                                <constraint firstAttribute="width" constant="30" id="xWY-Bg-c06"/>
+                                            </constraints>
                                             <imageReference key="image" image="checkmark" catalog="system" symbolScale="default"/>
                                         </imageView>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0Sb-hW-RhE">
@@ -103,14 +102,22 @@
                                             </constraints>
                                             <imageReference key="image" image="checkmark" catalog="system" symbolScale="default"/>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Walk the dog" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hRJ-Wq-XZc">
-                                            <rect key="frame" x="85" y="27" width="125" height="21.5"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Walk the dog" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hRJ-Wq-XZc">
+                                            <rect key="frame" x="107" y="5" width="291" height="64"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="aOa-2e-zNd" firstAttribute="top" secondItem="T1e-8n-eY8" secondAttribute="top" constant="5" id="Ffx-K8-sgB"/>
+                                        <constraint firstItem="hRJ-Wq-XZc" firstAttribute="leading" secondItem="aOa-2e-zNd" secondAttribute="trailing" constant="61" id="LJo-L2-WGU"/>
+                                        <constraint firstItem="aOa-2e-zNd" firstAttribute="leading" secondItem="T1e-8n-eY8" secondAttribute="leading" constant="16" id="VjB-SK-DEd"/>
+                                        <constraint firstAttribute="bottom" secondItem="hRJ-Wq-XZc" secondAttribute="bottom" constant="5" id="XCI-S1-oOd"/>
+                                        <constraint firstAttribute="bottom" secondItem="aOa-2e-zNd" secondAttribute="bottom" constant="5" id="o2u-WI-Owm"/>
+                                        <constraint firstItem="hRJ-Wq-XZc" firstAttribute="top" secondItem="T1e-8n-eY8" secondAttribute="top" constant="5" id="pYs-WD-D4G"/>
+                                        <constraint firstAttribute="trailing" secondItem="hRJ-Wq-XZc" secondAttribute="trailing" constant="16" id="tYn-pq-fo7"/>
+                                    </constraints>
                                     <variation key="default">
                                         <mask key="subviews">
                                             <exclude reference="0Sb-hW-RhE"/>
@@ -120,7 +127,7 @@
                                 <connections>
                                     <outlet property="CheckMark" destination="aOa-2e-zNd" id="ZVC-3Q-2Nx"/>
                                     <outlet property="ItemLabel" destination="hRJ-Wq-XZc" id="Zpv-S1-zJB"/>
-                                    <segue destination="wyB-vk-Q1H" kind="show" id="xE2-fz-XNy"/>
+                                    <segue destination="wyB-vk-Q1H" kind="show" identifier="GroupDetailsToAddItem" id="xE2-fz-XNy"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -170,6 +177,9 @@
                                         <constraint firstItem="1b9-mu-WuK" firstAttribute="leading" secondItem="B5F-wG-2DE" secondAttribute="leading" constant="16" id="gRA-75-LjB"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="TextFieldCell" destination="1b9-mu-WuK" id="Dxa-j1-pyd"/>
+                                </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SwitchCell" id="aA4-9e-Osa" customClass="SwitchTableViewCell" customModule="Checklists" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="95" width="414" height="47.5"/>
@@ -180,6 +190,9 @@
                                     <subviews>
                                         <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tMe-Qx-jv0">
                                             <rect key="frame" x="349" y="8" width="51" height="31.5"/>
+                                            <connections>
+                                                <action selector="switchDidChange:" destination="aA4-9e-Osa" eventType="valueChanged" id="LQL-Q6-Mxb"/>
+                                            </connections>
                                         </switch>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remind me" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RKI-K6-3cv">
                                             <rect key="frame" x="16" y="8" width="95" height="31.5"/>
@@ -198,7 +211,7 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="SwitchCell" destination="tMe-Qx-jv0" id="xhx-Of-NP5"/>
+                                    <outlet property="switchRemind" destination="tMe-Qx-jv0" id="xhx-Of-NP5"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DateCell" id="xXj-Ft-Ymr" customClass="DateTableViewCell" customModule="Checklists" customModuleProvider="target">
@@ -230,6 +243,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="DateCell" destination="v1l-OZ-doB" id="fhW-Ex-JeU"/>
+                                    <outlet property="datePicker" destination="v1l-OZ-doB" id="Uo2-xB-8FN"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -264,7 +278,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="fL9-fA-VWx"/>
+        <segue reference="xE2-fz-XNy"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Birthdays" width="36" height="36"/>
